[gd_scene load_steps=8 format=2]

[ext_resource path="res://player.tscn" type="PackedScene" id=1]
[ext_resource path="res://main.gd" type="Script" id=2]
[ext_resource path="res://mob.tscn" type="PackedScene" id=3]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/sound_2.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/gameover.wav" type="AudioStream" id=6]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 968, 0, 0, 0, 0, 0, 960, 536, 0, 0, 0, 0, 0, 536, 0, 0, 0, 0, 0, 0 )
}

[node name="main" type="Node"]
script = ExtResource( 2 )
mob = ExtResource( 3 )

[node name="background" type="ColorRect" parent="."]
margin_right = 960.0
margin_bottom = 540.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="player" parent="." instance=ExtResource( 1 )]

[node name="mob_timer" type="Timer" parent="."]

[node name="score_timer" type="Timer" parent="."]

[node name="start_timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="start_position" type="Position2D" parent="."]
position = Vector2( 240, 450 )

[node name="mob_path" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="mob_spawn_location" type="PathFollow2D" parent="mob_path"]

[node name="HUD" parent="." instance=ExtResource( 4 )]

[node name="music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="death_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
